feat: creation docs reset-password, forgot-password of sawagger
